[gd_scene load_steps=11 format=2]

[ext_resource path="res://main/scn/buttons/normal_btn/button.gd" type="Script" id=1]
[ext_resource path="res://main/res/icons/050-cancel.svg" type="Texture" id=2]
[ext_resource path="res://main/scn/chat_node/chat_node.gd" type="Script" id=3]
[ext_resource path="res://main/res/icons/settings-24px.svg" type="Texture" id=4]
[ext_resource path="res://main/res/themes/main.tres" type="Theme" id=5]
[ext_resource path="res://main/res/shaders/round_avatar.tres" type="Material" id=6]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 10.0
content_margin_right = 10.0
content_margin_top = 10.0
content_margin_bottom = 10.0
bg_color = Color( 0.223529, 0.223529, 0.223529, 1 )
border_color = Color( 0.478431, 0.572549, 1, 1 )
corner_radius_top_left = 13
corner_radius_top_right = 13
corner_detail = 20
shadow_color = Color( 0, 0, 0, 0.0784314 )
shadow_size = 15
shadow_offset = Vector2( 0, 3 )

[sub_resource type="StyleBoxFlat" id=2]
content_margin_left = 5.0
content_margin_right = 5.0
content_margin_top = 5.0
content_margin_bottom = 5.0
bg_color = Color( 0, 0, 0, 0.313726 )

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxFlat" id=4]
content_margin_left = 10.0
content_margin_right = 10.0
content_margin_top = 10.0
content_margin_bottom = 10.0
bg_color = Color( 0, 0, 0, 0.588235 )

[node name="ChatNode" type="PanelContainer"]
margin_right = 300.0
margin_bottom = 322.0
rect_min_size = Vector2( 300, 0 )
size_flags_horizontal = 8
size_flags_vertical = 10
theme = ExtResource( 5 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChatContainer" type="VBoxContainer" parent="."]
margin_left = 10.0
margin_top = 10.0
margin_right = 290.0
margin_bottom = 312.0
custom_constants/separation = 10

[node name="Header" type="HBoxContainer" parent="ChatContainer"]
margin_right = 280.0
margin_bottom = 35.0

[node name="Avatar" type="TextureRect" parent="ChatContainer/Header"]
material = ExtResource( 6 )
margin_right = 35.0
margin_bottom = 35.0
rect_min_size = Vector2( 35, 35 )
expand = true
stretch_mode = 1

[node name="User" type="LinkButton" parent="ChatContainer/Header"]
margin_left = 39.0
margin_top = 8.0
margin_right = 70.0
margin_bottom = 27.0
size_flags_vertical = 4
text = "user"
underline = 1

[node name="SettingsBtn" type="Button" parent="ChatContainer/Header"]
margin_left = 216.0
margin_right = 246.0
margin_bottom = 35.0
rect_min_size = Vector2( 30, 30 )
size_flags_horizontal = 14
icon = ExtResource( 4 )
expand_icon = true
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
texture_active = ExtResource( 4 )
texture_inactive = ExtResource( 4 )
color = Color( 0.552941, 0.552941, 0.552941, 1 )

[node name="Tween" type="Tween" parent="ChatContainer/Header/SettingsBtn"]

[node name="CloseBtn" type="Button" parent="ChatContainer/Header"]
margin_left = 250.0
margin_right = 280.0
margin_bottom = 35.0
rect_min_size = Vector2( 30, 30 )
size_flags_horizontal = 12
icon = ExtResource( 2 )
expand_icon = true
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
texture_active = ExtResource( 2 )
texture_inactive = ExtResource( 2 )
color = Color( 0.913725, 0.0980392, 0.286275, 1 )

[node name="Tween" type="Tween" parent="ChatContainer/Header/CloseBtn"]

[node name="History" type="ScrollContainer" parent="ChatContainer"]
margin_top = 45.0
margin_right = 280.0
margin_bottom = 265.0
rect_min_size = Vector2( 0, 200 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/bg = SubResource( 2 )
scroll_horizontal_enabled = false

[node name="Messages" type="VBoxContainer" parent="ChatContainer/History"]
margin_left = 5.0
margin_top = 5.0
margin_right = 275.0
margin_bottom = 215.0
size_flags_horizontal = 3
size_flags_vertical = 11
custom_constants/separation = 6

[node name="Box" type="LineEdit" parent="ChatContainer"]
margin_top = 275.0
margin_right = 280.0
margin_bottom = 302.0

[node name="Settings" type="VBoxContainer" parent="."]
visible = false
margin_left = 10.0
margin_top = 10.0
margin_right = 290.0
margin_bottom = 312.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator" type="HSeparator" parent="Settings"]
margin_right = 280.0
margin_bottom = 40.0
mouse_filter = 2
custom_styles/separator = SubResource( 3 )
custom_constants/separation = 40

[node name="ColorRect" type="PanelContainer" parent="Settings"]
margin_top = 48.0
margin_right = 280.0
margin_bottom = 302.0
size_flags_vertical = 3
custom_styles/panel = SubResource( 4 )

[node name="VBoxContainer" type="VBoxContainer" parent="Settings/ColorRect"]
margin_left = 10.0
margin_top = 10.0
margin_right = 270.0
margin_bottom = 244.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Settings/ColorRect/VBoxContainer"]
margin_right = 260.0
margin_bottom = 25.0
text = "Chat Transparency"
align = 1

[node name="TransparencySlider" type="HSlider" parent="Settings/ColorRect/VBoxContainer"]
margin_left = 30.0
margin_top = 33.0
margin_right = 230.0
margin_bottom = 65.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 4
min_value = 30.0
value = 100.0
tick_count = 10
ticks_on_borders = true

[node name="Transparency" type="Label" parent="Settings/ColorRect/VBoxContainer"]
margin_top = 73.0
margin_right = 260.0
margin_bottom = 98.0
text = "100"
align = 1
